--- a/orders/templates/orders/orders_one.html
+++ b/orders/templates/orders/orders_one.html
@@ -177,7 +177,7 @@
             {% endif %}
             &nbsp; Дата: &nbsp;<span class="badge rounded-pill bg-dark"> {{ item.0.created_at }} </span>&nbsp;&nbsp;
             <button type="button" class="btn btn-sm btn-light">
-                <a href="edit/{{ item.0.id }}">Редактировать</a>
+                <a href="../edit/{{ item.0.id }}">Редактировать</a>
             </button>
         </div>
     </div>
