--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,8 @@
 									<!--begin::Menu-->
 									{% load _nav_tags %}
                                     {% navigation %}
+                                    <img alt="ny2022" src="../media/ny2022.png" />
+
 									<!--end::Menu-->
 								</div>
 								<!--end::Nav-->
