--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -120,7 +120,7 @@
 									</div>
 									<!--end::Wrapper-->
 									<!--begin::Button-->
-                                        <a href="/" class="btn btn-dark fw-bold" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">Cоздать</a>
+                                        <a href="/" class="btn btn-dark fw-bold" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">Создать</a>
                                     <div class="menu menu-sub menu-sub-dropdown w-250px w-md-300px" data-kt-menu="true" id="kt_menu_create123">
 											<!--begin::Header-->
 											<div class="px-7 py-5">
