--- a/plugins/templates/plugins/plugins_uuid_view.html
+++ b/plugins/templates/plugins/plugins_uuid_view.html
@@ -11,7 +11,7 @@
 {% block content %}
     {% block javascript %}
     <script>
-    // var interval = 1000;
+    var interval = 1000;
     $(document).ready(function () {
             $('#uuidgo').on('click', function(){
                 alert('onclick is working.');
