--- a/plugins/templates/plugins/plugins_uuid_view.html
+++ b/plugins/templates/plugins/plugins_uuid_view.html
@@ -32,9 +32,9 @@
                             var p2 = document.getElementById("uuidres");
                             p2.textContent += '['+ response.count +'/'+ response.module_len + '] ПЕРЕНОС '+ response.module_name
                                 +' СДЕЛАН. Время - ' + response.time + ' секунд \n\n ';
-                            if (response.count < response.module_len) {
-                                  doAjax()
-                                }
+                            //if (response.count < response.module_len) {
+                            //      doAjax()
+                             //   }
                             },
                         complete: function (response) {
                             //console.log('count: '+ response.count)
