--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -305,6 +305,31 @@
         </ul>
     </nav>
 											</div>
+
+
+                            {% for key, value in status_dict.items %}
+                                {% if key == 'warn3' and value %}
+                                    Не выданные заказы более 3 дней:<br>
+                                    {% for item in value %}
+                                        <a href="#" class="btn btn-secondary ">{{ item }}</a>
+                                    {% endfor %}
+                                {% endif %}
+                                {% if key == 'warn7' and value %}
+                                    Не выданные заказы более 7 дней:<br>
+                                    {% for item in value %}
+                                        <a href="#" class="btn btn-warning">{{ item }}</a>
+                                    {% endfor %}
+                                {% endif %}
+                                {% if key == 'warn14' and value %}
+                                    Не выданные заказы более 14 дней:<br>
+                                    {% for item in value %}
+                                        <a href="#" class="btn btn-danger me-1 mt-1">{{ item }}</a>
+                                    {% endfor %}
+                                {% endif %}
+                                <br><br>
+                            {% endfor %}<br><br>
+
+
 											<!--end::ORDERS-->
 											<!--end::Body-->
 										</div>
