--- a/money/templates/money/sidebar_money_menu_tags.html
+++ b/money/templates/money/sidebar_money_menu_tags.html
@@ -9,8 +9,51 @@
         <!--end:Menu content-->
     </div>
 
+<form action="" method="get">
+
+<div data-kt-menu-trigger="click" class="menu-item menu-accordion show">
+    <!--begin:Menu link-->
+    <span class="menu-link">
+        <span class="menu-icon">
+            <!--begin::Svg Icon | path: icons/duotune/communication/com012.svg-->
+            <span class="svg-icon svg-icon-2">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path opacity="0.3"
+                          d="M20 3H4C2.89543 3 2 3.89543 2 5V16C2 17.1046 2.89543 18 4 18H4.5C5.05228 18 5.5 18.4477 5.5 19V21.5052C5.5 22.1441 6.21212 22.5253 6.74376 22.1708L11.4885 19.0077C12.4741 18.3506 13.6321 18 14.8167 18H20C21.1046 18 22 17.1046 22 16V5C22 3.89543 21.1046 3 20 3Z"
+                          fill="currentColor"/>
+                    <rect x="6" y="12" width="7" height="2" rx="1" fill="currentColor"/>
+                    <rect x="6" y="7" width="12" height="2" rx="1" fill="currentColor"/>
+                </svg>
+            </span>
+            <!--end::Svg Icon-->
+        </span>
+        <span class="menu-title">Дата</span>
+        <span class="menu-arrow"></span>
+    </span>
+    <!--end:Menu link-->
+
+    <!--begin:Menu sub-->
+    <div class="menu-sub menu-sub-accordion ">
+        <!--begin:Menu item-->
+        <div class="menu-item">
+            <!--begin:Menu link-->
+            <div class="list-group">
+                <div class="input-group mb-3">
+                    <input class="form-control" type="date" id="date" name="date">
+                </div>
+                <div class="input-group mb-3">
+                    <input class="form-control" type="date" id="date2" name="date2">
+                </div>
+            </div>
+            <!--end:Menu link-->
+        </div>
+        <!--end:Menu item-->
+    </div>
+    <!--end:Menu sub-->
+
+</div>
+
 <!-- используем этот код если модуль подразумевает возможность поиска, фильтарции или меню от других приложенией -->
-    <form action="" method="get">
         {% csrf_token %}
         {% for key, value in relatedmenu.items %}
             {% for k2, v2 in value.items %}
