--- a/templates/base.html
+++ b/templates/base.html
@@ -851,6 +851,9 @@
 							<!--end::Aside menu-->
 							<!--begin::Footer-->
 							<div class="aside-footer flex-column-auto pt-5 pb-7 px-7" id="kt_aside_footer">
+                                <a href="http://wiki.hubcrm.ru">
+									<span class="btn-label">Wiki</span>
+								</a> |
 								<a href="https://preview.keenthemes.com/html/metronic/docs">
 									<span class="btn-label">Docs & Components</span>
 								</a>
