--- a/money/templates/money/money_list.html
+++ b/money/templates/money/money_list.html
@@ -29,7 +29,7 @@
                             Предоплата: {{ item.prepayment }}<br>
                             Дата создания: {{ item.created_at }}<br>
                                                     <button type="button" class="btn btn-sm btn-light">
-                            <a href="edit/{{ item.pk }}">Редактировать</a>
+                            <a href="edit/{{ item.money.pk }}">Редактировать</a>
                         </button>
                         </div>
                     </div>
