--- a/money/templates/money/money_list.html
+++ b/money/templates/money/money_list.html
@@ -54,7 +54,7 @@
                     </li>
                 {% elif p > page_obj.number|add:-3 and p < page_obj.number|add:3 %}
                     <li class="page-item">
-                        <a class="page-link" href="?">{{ p }}</a>
+                        <a class="page-link" href="?{% url_replace request page=p %}">{{ p }}</a>
                     </li>
                 {% endif %}
             {% endfor %}
