--- a/money/templates/include/_forms_textinput.html
+++ b/money/templates/include/_forms_textinput.html
@@ -1,3 +1,15 @@
+<div class="form-check form-switch form-check-solid">
+    <input class="form-check-input" type="{{ widget.type }}" name="{{ widget.name }}" id="flexSwitchDefault"
+    {% if widget.value != None %}
+       value="{{ widget.value|stringformat:'s' }}"
+    {% endif %}
+    {% include "django/forms/widgets/attrs.html" %}>
+    <label class="form-check-label" for="flexSwitchDefault">
+        <h1><b>Оплачено!</b></h1>
+    </label>
+</div>
+
+<!--
 <div class="form-check form-check-custom form-check-danger form-check-solid">
     <input class="form-check-input" type="{{ widget.type }}" name="{{ widget.name }}"
        {% if widget.value != None %}
@@ -8,5 +20,5 @@
         <h1><b>Оплачено!</b></h1>
     </label>
 </div>
-
+-->
 
