--- a/orders/templates/include/_forms_orders_datalist.html
+++ b/orders/templates/include/_forms_orders_datalist.html
@@ -79,6 +79,7 @@
 
     </script>
 {% endblock javascript %}
+
 <br>
 <input id="ajax_input_{{ widget.name }}" list="{{ widget.name }}" autocomplete="off"
     {% if widget.value != None %} name="{{ widget.name }}" value="{{ widget.value|stringformat:'s' }}"{% endif %}
@@ -90,7 +91,7 @@
                 {% include option.template_name with widget=option %}</span>
         {% endfor %}
             {% endfor %}
-
+<a href="/orders/settings/add/?model={{ widget.name }}" class="link-primary" target="_blank">Добавить</a>
 <datalist id="{{ widget.name }}">
     <optgroup label="">
     </optgroup>
