--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 	<!--begin::Head-->
 	<head>
 		<title>{% block title %}HUB CRM{% endblock %}</title>
+        {{ form.media.css }}
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="shortcut icon" href="{% static 'assets/media/logos/favicon.ico' %}" />
@@ -21,10 +22,15 @@
 		<link href="{% static 'assets/plugins/global/plugins.bundle.css' %}" rel="stylesheet" type="text/css" />
 		<link href="{% static 'assets/css/style.bundle.css' %}" rel="stylesheet" type="text/css" />
 		<!--end::Global Stylesheets Bundle-->
-
+<script src="{% static 'jquery/jquery-3.6.0.min.js' %}"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     {% block link %}{% endblock %}
     <!-- jQuery -->
-    <script src="{% static 'jquery/jquery-3.6.0.min.js' %}"></script
+
+    <!-- select2
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script> -->
   </head>
 
     	<!--begin::Body-->
@@ -1284,6 +1290,7 @@
 
         <!--begin::Old v bootstrap-->
         <script src="{% static 'bootstrap-5.0.0/js/bootstrap.bundle.js' %}"></script>
+        {{ form.media.js }}
 	</body>
 	<!--end::Body-->
 
